variables.Variables.scala.code
var nbPas:int = 0
var dejaFait:int = 0

while(!porteBiscuit){
  avance()
  nbPas = nbPas + 1
  
  if (estSurBiscuit()){
    prendBiscuit()
    while(nbPas != dejaFait){
    	recule()
      defaFait = dejaFait + 1
    }
    posBiscuit()
  }
}